<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/member_location_confirmation_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_layout"
    android:orientation="vertical"
    android:padding="8dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:drawablePadding="5dp"
                android:text="@string/tfm_member_loc_bottom_sheet_state"
                android:textSize="18sp"
                android:id="@+id/state"
                android:textColor="@color/view_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:drawablePadding="5dp"
                android:text="@string/tfm_member_loc_bottom_sheet_lga"
                android:textSize="18sp"
                android:id="@+id/lga"
                android:textColor="@color/view_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:drawablePadding="5dp"
                android:text="@string/tfm_member_loc_bottom_sheet_ward"
                android:textSize="18sp"
                android:id="@+id/ward"
                android:textColor="@color/view_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:drawablePadding="5dp"
                android:text="@string/tfm_member_loc_bottom_sheet_village"
                android:textSize="18sp"
                android:id="@+id/village"
                android:textColor="@color/view_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:drawablePadding="5dp"
                android:text="@string/tfm_member_loc_other_bottom_sheet_other_crops"
                android:textSize="18sp"
                android:id="@+id/sex"
                android:textColor="@color/view_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:drawablePadding="5dp"
                android:text="@string/tfm_member_loc_bottom_sheet_other_crops_not_listed"
                android:textSize="18sp"
                android:id="@+id/crop_type"
                android:textColor="@color/view_black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/bottom_sheet_text_view_separation"
                android:drawablePadding="5dp"
                android:text="@string/tfm_member_loc_state"
                android:textSize="18sp"
                android:id="@+id/bottom_sheet_state"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/view_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/bottom_sheet_text_view_separation"
                android:drawablePadding="5dp"
                android:text="@string/tfm_member_loc_lga"
                android:textSize="18sp"
                android:id="@+id/bottom_sheet_lga"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/view_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/bottom_sheet_text_view_separation"
                android:drawablePadding="5dp"
                android:id="@+id/bottom_sheet_ward"
                android:text="@string/tfm_member_loc_ward"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="18sp"
                android:textColor="@color/view_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/bottom_sheet_text_view_separation"
                android:drawablePadding="5dp"
                android:text="@string/tfm_member_loc_village"
                android:textSize="18sp"
                android:id="@+id/bottom_sheet_village"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/view_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/bottom_sheet_text_view_separation"
                android:drawablePadding="5dp"
                android:text="@string/tfm_member_other_crops"
                android:textSize="18sp"
                android:id="@+id/bottom_sheet_other_crops"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/view_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/bottom_sheet_text_view_separation"
                android:drawablePadding="5dp"
                android:text="@string/tfm_member_other_crops_not_listed"
                android:textSize="18sp"
                android:id="@+id/bottom_sheet_other_crops_not_listed"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/view_black"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="@color/view_red"
            android:text="@string/confirmation_page_cancel"
            android:textColor="@color/colorWhite"
            android:layout_marginEnd="@dimen/bottom_sheet_button_separation"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="@color/view_green"
            android:baselineAligned="false"
            android:text="@string/confirmation_page_confirm"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="@dimen/bottom_sheet_button_separation"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="16sp" />


    </LinearLayout>


</LinearLayout>