<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="30dp"
    android:background="#CFCFCF" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:drawablePadding="5dp"
        android:text="@string/secretary_check"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textColor="@color/view_white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button

            android:id="@+id/location_false"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/view_red"
            android:text="@string/no"
            android:textColor="#fff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/location_true"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#00AC1313"
            android:backgroundTint="@color/view_green"
            android:baselineAligned="false"
            android:text="@string/yes"
            android:textColor="#fff"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>
