<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TFM.TGHome"
    tools:showIn="@layout/tg_home_page">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:theme="@style/Theme.TGRecruitment.TFM">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/toolbar_linear_layout"
            android:padding="@dimen/tg_toolbar_padding">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_tg"
                style="@style/Widget.TGRecruitment.Toolbar"
                android:layout_width="match_parent"
                android:background="@color/colorWhite"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_back_button"
                app:title="@string/tfm_activity_name" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/leader_card"
        android:paddingStart="@dimen/tfm_home_grid_spacing"
        android:paddingEnd="@dimen/tfm_home_grid_spacing"
        android:padding="@dimen/tfm_text_view_padding">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/leader_card_image_height"
            android:layout_height="match_parent"
            android:src="@drawable/avatar"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/textColorPrimary"
            android:layout_marginEnd="@dimen/tfm_text_view_padding"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/leader_name_switch_separation">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_leader_name"
                        android:textSize="17sp"
                        android:text="@string/member_name"
                        android:layout_gravity="start"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_leader_role"
                        android:textSize="12sp"
                        android:text="@string/member_role"
                        android:layout_gravity="start"/>

                </LinearLayout>



                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sw_leader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>

                <!--<com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:useMaterialThemeColors="false"
                    android:text="@string/leader_name"
                    android:textSize="17sp"/>-->

            </LinearLayout>

            <TextView
                android:id="@+id/tv_lga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leader_lga"/>

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leader_location"/>

            <TextView
                android:id="@+id/tv_crop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leader_crop"/>

            <TextView
                android:id="@+id/tv_member_program"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leader_member_program"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/tfmHomeGridBackgroundColor" />

    </androidx.core.widget.NestedScrollView>

</LinearLayout>